# cargo-rpm

./: .travis.yml  CHANGES.md  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
src/: application.rs  archive.rs  builder.rs  commands.rs  config.rs  error.rs  init.rs  lib.rs  license.rs  main.rs  rpmbuild.rs  target.rs  target_architecture.rs  templates.rs
src/commands/: build.rs  init.rs  version.rs
templates/: spec.hbs
tests/: acceptance.rs
