[package]
name        = "cargo-rpm"
description = "Build RPMs from Rust projects using Cargo workflows"
version     = "0.7.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
readme      = "README.md"
edition     = "2018"
categories  = ["command-line-utilities", "development-tools"]
keywords    = ["rpm", "cargo", "package", "release"]
homepage    = "https://github.com/rustrpm/cargo-rpm/"

[badges]
travis-ci = { repository = "rustrpm/cargo-rpm" }
maintenance = { status = "passively-maintained" }

[dependencies]
abscissa_core = "0.4"
failure = "0.1.8"

# This is added to make sure `failure` does not use backtrace v0.3.47.
backtrace = "=0.3.46"

flate2 = { version = "1", default-features = false, features = ["zlib"] }
gumdrop = "0.7"
lazy_static = "1"
handlebars = "2"
serde = { version = "1", features = ["serde_derive"] }
tar = "0.4"
cargo_metadata = "0.9"

[dev-dependencies.abscissa_core]
version = "0.4"
features = ["testing"]

[package.metadata.rpm]
cargo = { buildflags = ["--release"] }
targets = { cargo-rpm = { path = "/usr/bin/cargo-rpm" } }
